--- a/code/res/zgf.qss
+++ b/code/res/zgf.qss
@@ -1,8 +1,8 @@
 
 *{
-	font-family:  "Arial", "Segoe UI", "黑体", "等线";
-	color: white;
-	background:rgb(50, 50, 50);
+        font-family:  "Segoe UI", "Microsoft YaHei";
+        color: white;
+        background:rgb(50, 50, 50);
 }
 /**********子界面背景********* */
 
@@ -11,25 +11,25 @@ QDockWidget>QWidget {
 }
 QDockWidget, QLabel
 {
-	font-size: 14px;
-	color:white;
+        font-size: 16px;
+        color:white;
 }
 QDockWidget::title
 {
-	text-align: center;
+        text-align: center;
     background: rgb(90, 90, 90);
 }
 
 QLabel{
-	background: transparent;
+        background: transparent;
 }
 /**********提示********* */
 QToolTip{
     border: 1px solid rgb(45, 45, 45);
-	color: yellow;
-	border: 2px solid #333;
+        color: yellow;
+        border: 2px solid #333;
 }
- 
+
 /**********菜单栏*********
  */
 QMenuBar {
@@ -49,7 +49,7 @@ QMenuBar::item:!enabled {
 QMenuBar::item:enabled:selected {
         background: rgba(255, 255, 255, 40);
 }
- 
+
 /**********菜单********* */
 QMenu {
         border: 1px solid rgb(100, 100, 100);
@@ -81,7 +81,7 @@ QMenu::icon {
         padding-left: 2px;
         padding-right: 2px;
 }
- 
+
 /**********状态栏********* */
 QStatusBar {
         background: rgb(57, 58, 60);
@@ -90,20 +90,22 @@ QStatusBar::item {
         border: none;
         border-right: 1px solid rgb(100, 100, 100);
 }
- 
+
 /**********分组框********* */
 QGroupBox {
         font-size: 15px;
         border: 1px solid rgb(80, 80, 80);
         border-radius: 4px;
-        margin-top: 10px;
+        margin-top: 20px;
+                margin-bottom:10px;
 }
 QGroupBox::title {
         color: rgb(175, 175, 175);
-        top: -12px;
-        left: 10px;
+        top: -15px;
+        left: 1px;
+                background: transparent;
 }
- 
+
 /**********页签项********* */
 QTabWidget::pane {
         border: none;
@@ -132,7 +134,7 @@ QTabBar::tab:selected {
         color: white;
         background: rgb(0, 160, 230);
 }
- 
+
 /**********表头********* */
 QHeaderView{
         border: none;
@@ -152,7 +154,7 @@ QHeaderView::section:horizontal:hover {
 QHeaderView::section:horizontal:pressed {
         background: rgb(0, 180, 255);
 }
- 
+
 /**********表格********* */
 QTableView, QTreeView, QListView {
         border: 1px solid rgb(45, 45, 45);
@@ -177,7 +179,7 @@ QTableView::indicator, QTreeView::indicator, QListView::indicator {
         width: 20px;
         height: 20px;
 }
- 
+
 /**********滚动条-水平********* */
 QScrollBar:horizontal {
         height: 20px;
@@ -214,7 +216,7 @@ QScrollBar::add-line:horizontal:hover {
 QScrollBar::add-page:horizontal,QScrollBar::sub-page:horizontal {
         background: transparent;
 }
- 
+
 /**********滚动条-垂直********* */
 QScrollBar:vertical {
         width: 20px;
@@ -241,7 +243,7 @@ QScrollBar::add-line:vertical:hover {
 QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
         background: transparent;
 }
- 
+
 /**********下拉列表********* */
 QComboBox {
         height: 25px;
@@ -283,7 +285,7 @@ QComboBox QAbstractItemView::item:selected {
         background: rgba(255, 255, 255, 40);
         color: rgb(230, 230, 230);
 }
- 
+
 /**********进度条********* */
 QProgressBar{
         border:3px solid rgb(68, 69, 73);
@@ -294,7 +296,7 @@ QProgressBar{
 QProgressBar::chunk {
         background: rgb(0, 160, 230);
 }
- 
+
 /**********复选框********* */
 QCheckBox{
         spacing: 5px;
@@ -312,7 +314,7 @@ QCheckBox::indicator {
         width: 20px;
         height: 20px;
 }
- 
+
 /**********单选框********* */
 QRadioButton{
         spacing: 5px;
@@ -330,10 +332,10 @@ QRadioButton::indicator {
         width: 20px;
         height: 20px;
 }
- 
+
 /**********输入框********* */
 QLineEdit {
-        border-radius: 4px;
+        border-radius: 2px;
         height: 25px;
         border: 1px solid rgb(100, 100, 100);
         background: rgb(72, 72, 73);
@@ -347,35 +349,36 @@ QLineEdit:enabled:hover, QLineEdit:enabled:focus {
 QLineEdit:!enabled {
         color: rgb(155, 155, 155);
 }
- 
+
 /**********文本编辑框********* */
 QTextEdit {
         border: 1px solid rgb(45, 45, 45);
         color: rgb(175, 175, 175);
         background: rgb(57, 58, 60);
 }
- 
+
 /**********滚动区域********* */
 QScrollArea {
         border: 1px solid rgb(45, 45, 45);
         background: rgb(57, 58, 60);
 }
-QScrollBar::add-line:vertical      
-{      
-	height:0px;
-	background-color: transparent;         
-	subcontrol-position:bottom;             
-}                    
-QScrollBar::sub-line:vertical               
-{      
-	height:0px;                        
-	background-color: transparent;        
-	subcontrol-position:top;      
-}  
- 
+QScrollBar::add-line:vertical
+{
+        height:0px;
+        background-color: transparent;
+        subcontrol-position:bottom;
+}
+QScrollBar::sub-line:vertical
+{
+        height:0px;
+        background-color: transparent;
+        subcontrol-position:top;
+}
+
 /**********按钮********* */
 QPushButton{
-        border: 2px solid rgb(85, 85, 85);
+        border: 3px solid rgb(85, 85, 85);
+                border-radius:5px;
         width: 75px;
         height: 25px;
 }
