--- a/code/res/res.qrc
+++ b/code/res/res.qrc
@@ -3,5 +3,16 @@
         <file>Aqua.qss</file>
         <file>zgf.qss</file>
         <file>top.ico</file>
+        <file>ui/btn_cancel.png</file>
+        <file>ui/btn_cancel_hover.png</file>
+        <file>ui/btn_checkbox_off.png</file>
+        <file>ui/btn_checkbox_on.png</file>
+        <file>ui/btn_confirm.png</file>
+        <file>ui/btn_confirm_hover.png</file>
+        <file>ui/logo.ico</file>
+        <file>ui/logo.gif</file>
+        <file>ui/btn_add.png</file>
+        <file>ui/btn_add_hover.png</file>
+        <file>ui/texture.png</file>
     </qresource>
 </RCC>
